<resources>
    <string name="app_name">婴儿菜谱</string>
    <string name="app_logo">婴&#160;儿\n菜&#160;谱</string>
    <string name="digits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="register_hint">设置用户名,昵称与密码</string>
    <string name="register_hint_context">用户名和密码由8&#8211;16位数字、字母组成。</string>
    <string name="register_hint_user">用户名</string>
    <string name="register_hint_name">昵称</string>
    <string name="register_hint_password">密码</string>
    <string name="register">注册</string>
    <string name="go_register">去注册</string>
    <string name="login">登录</string>
    <string name="bottom1">分类</string>
    <string name="bottom2">搜索</string>
    <string name="bottom3">收藏</string>
    <string name="bottom4">我的</string>
    <string name="add_hint1">食物名称</string>
    <string name="add_hint2">适龄月份</string>
    <string name="add_hint3">材料</string>
    <string name="add_hint4">做法</string>
    <string name="add_hint5">功效</string>
    <string name="add_cookbook_hint">菜谱名称</string>
    <string name="add_ok">添加</string>
    <string name="add_choose_hint">点击添加图片</string>
    <string name="desc">图片提醒</string>
    <string name="search_hint">请输入菜名</string>
    <string name="empty">没有数据</string>
    <string name="food_effect">功效</string>
    <string name="food_practice">做法</string>
    <string name="food_material">材料</string>
    <string name="delete">删除</string>
</resources>
