<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/public_title"/>
    <TextView
        android:padding="16dp"
        android:text="@string/register_hint"
        android:layout_width="wrap_content"
        android:textSize="24sp"
        android:textColor="#000000"
        android:layout_height="wrap_content" />
    <TextView
        android:paddingLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_hint_context"
        android:textSize="13sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@color/register_line"
        android:showDividers="middle|end"
        android:padding="16dp">
        <EditText
            android:id="@+id/register_et_name"
            android:textSize="18sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@null"
            android:hint="@string/register_hint_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/register_et_user"
            android:background="@null"
            android:textSize="18sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:hint="@string/register_hint_user"
            android:layout_width="match_parent"
            android:digits="@string/digits"
            android:layout_height="wrap_content" />



        <EditText
            android:id="@+id/register_et_pw"
            android:textSize="18sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@null"
            android:hint="@string/register_hint_password"
            android:digits="@string/digits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <Button
        android:id="@+id/register_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_radius_black"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="13sp" />
</LinearLayout>