<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:showDividers="middle"
    android:divider="@drawable/login_line"
    android:orientation="vertical">
    <android.support.v4.view.ViewPager
        android:layout_weight="1"
        android:id="@+id/main_vp"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
   <RadioGroup
       android:layout_width="match_parent"
       android:layout_height="48dp"
       android:paddingTop="5dp"
       android:background="@color/register_login"
       android:orientation="horizontal">
       <RadioButton
           android:id="@+id/tab_1"
           android:gravity="center"
           android:button="@null"
           android:drawableTop="@drawable/bottom1_img"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="match_parent"
           android:checked="true"
           android:textColor="@drawable/bottom_text"
           android:text="@string/bottom1"/>

       <RadioButton
           android:id="@+id/tab_2"
           android:gravity="center"
           android:button="@null"
           android:drawableTop="@drawable/bottom2_img"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="match_parent"
           android:textColor="@drawable/bottom_text"
           android:text="@string/bottom2"/>

       <RadioButton
           android:id="@+id/tab_3"
           android:gravity="center"
           android:button="@null"
           android:drawableTop="@drawable/bottom3_img"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="match_parent"
           android:textColor="@drawable/bottom_text"
           android:text="@string/bottom3"/>

       <RadioButton
           android:id="@+id/tab_4"
           android:gravity="center"
           android:button="@null"
           android:drawableTop="@drawable/bottom4_img"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="match_parent"
           android:textColor="@drawable/bottom_text"
           android:text="@string/bottom4"/>
   </RadioGroup>
</LinearLayout>